Bugfix 16592 - Check box icons are placed too high in the Global Permissions tab
git-svn-id: http://halodev.ontoprise.com/svn/HaloSMWExtension/trunk@13905 f80b7aa0-dfcc-4e65-a0d9-74108174cbc8

--- a/extensions/HaloACL/scripts/jsTree.v.0.9.9a/themes/haloacl/style.css
+++ b/extensions/HaloACL/scripts/jsTree.v.0.9.9a/themes/haloacl/style.css
@@ -153,7 +153,6 @@
     right: 60px;
     width: 16px;
     height: 16px;
-    margin-top: -16px;
 }
 
 #haclGroupTreeContainer {
